force-app/main/default/objects/Vendedores__c/Vendedores__c.object-meta.xml
<CustomObject>
    <description>Usuarios que se encargarán de gestionar las ventas</description>
    <label>Vendedorsss</label>
    <nameField>
        <label>Nombre del vendedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendedoresss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>