force-app/main/default/objects/Vendedores__c/fields/Es_Agente_AI__c.field-meta.xml
<CustomField>
    <fullName>Es_Agente_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si este registro de Vendedores__c representa a un agente AI (Oli, SDR Agent, Camila, Renata, Ana, Ollin Digital) en lugar de un vendedor humano. Evita crear Users adicionales y permite que los agentes AI sean &quot;ownable&quot; sin consumir licencias.</description>
    <label>Es Agente AI</label>
    <type>Checkbox</type>
</CustomField>