force-app/main/default/objects/Vendedores__c/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <label>Rol</label>
    <length>100</length>
    <type>Text</type>
</CustomField>