force-app/main/default/objects/Vendedores__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Teléfono</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>