force-app/main/default/objects/Vendedores__c/fields/Tipo_Agente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Agente__c</fullName>
    <description>Clasifica el tipo de vendedor. Humano = persona con licencia Salesforce. Agente AI = record sin User. Agente Externo = agente de promotoría (Allianz u otra) que no es empleado Ollin.</description>
    <label>Tipo de Agente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agente AI</fullName>
            </value>
            <value>
                <fullName>Agente Externo</fullName>
            </value>
            <value>
                <fullName>Humano</fullName>
                <default>true</default>
                <label>Humano</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>