force-app/main/default/objects/Vendedores__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CorreoElectronico__c</columns>
    <columns>Telefono__c</columns>
    <columns>Rol__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>